# C

./: CMakeLists.txt
C folder/: CTakeHomeTestPrestonAnswers.txt  DArray.c  DArray.h  TestDArray.c  TypicalRounder.c  ansewr(1).txt  ansewr.txt  areas.c  astr.c  breaker.c  catcon.c  cmdline.c  compile.bat  factoraz.c  foction.c  freq.c  gradefffs.txt  grader.c  guesser.c  haikuuuu.c  helloworld.c  helloworld.out  mathprobs.c  pointerss.c  pointerssstructies.c  primer.c  probs.c  quadratic.c  reader.c  rounder.c  structies.c  swapping.c  switches.c  terrible_truth.c  tester.c  testtest.c  translator.c  xmas.c
C folder/pn_craft/: Terminal  comments.txt  finalpointouts.txt  pn_craft  pn_craft.c
