cmake_minimum_required(VERSION 3.7)
project(C)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        areas.exe
        astr.exe
        breaker.exe
        catcon.exe
        ch2problem5.exe
        ch4problem2.exe
        ch5problem2.exe
        ch5problem3.exe
        ch5problem5.exe
        cmdline.exe
        factoraz.exe
        foction.exe
        freq.exe
        grader.exe
        guesser.exe
        haikuuuu.exe
        HelloWorld.exe
        mathprobs.exe
        pn_craft
        pn_craft.exe
        pointerss.exe
        pointerssstructies.exe
        primer.exe
        probs.exe
        quadratic.exe
        reader.exe
        rounder.exe
        structies.exe
        swapping.exe
        switches.exe
        terrible_truth.exe
        tester.exe
        testtest.exe
        translator.exe
        TypicalRounder.exe
        xmas.exe)

add_executable(C ${SOURCE_FILES})